--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -98,6 +98,37 @@ layout: default
                 </section>
                 {% endif %}
 
+                <!-- light search -->
+                <section>
+                    <hr class="hidden-sm hidden-xs">
+                    <h5><a href="#">light search</a></h5>
+                    <div hidden="hidden">
+                        <!--Google-->
+                        <form action="https://www.google.com.hk/search">
+                            <input type="text" name=q id="GContent" size=30>
+                            <input type="submit" id="ToG">
+                        </form>
+                        <!--Baidu-->
+                        <form action="http://baidu.com/s">
+                            <input type="text" name=wd id="BaiduContent" size=30>
+                            <input type="submit" id="ToBaidu">
+                        </form>
+                        <!--Bing-->
+                        <form action="http://cn.bing.com/search">
+                            <input type="text" name=q id="BingContent" size=30>
+                            <input type="submit" id="ToBing">
+                        </form>
+                    </div>
+                    <div class="visible-md visible-lg">
+                        <form>
+                            <input placeholder="">
+                            <!--不同的搜索引擎按钮-->
+                            <button class="btn btn-warning s-btn submit">GG</button>
+                            <button class="btn btn-success s-btn submit">Bing</button>
+                            <button class="btn btn-danger s-btn submit">Baidu</button>
+                        </form>
+                    </div>
+                </section>
                 <!-- Short About -->
                 <section class="visible-md visible-lg">
                     <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
@@ -204,3 +235,48 @@ layout: default
         {% endif %}
 	</div>
 </div>
+<script>
+    //搜索判断
+    function search(type){
+        var content = $(".input-search").val();
+        //若为空则提示
+        if(content.length==0){
+            $(".input-search").attr("placeholder","请输入内容后再试");
+        }else{
+            switch (type){
+                case "Baidu":
+                    $("#BaiduContent").val(content);
+                    $("#ToBaidu").click();
+                    break;
+                case "Bing":
+                    $("#BingContent").val(content);
+                    $("#ToBing").click();
+                    break;
+                case "GG":
+                    $("#GContent").val(content);
+                    $("#ToG").click();
+                    break;
+                default:{
+                    swal({
+                        title: "错误",
+                        text: "请刷新网页再试！",
+                        type: "error",
+                        confirmButtonText: "Cool"
+                    })
+                }
+            }
+
+        }
+    }
+    $(".submit").click(function(){
+        var kind = $(this).text();
+        search(kind);
+    })
+
+    $(".input-search").keypress(function(event){
+        var code = event.keyCode;
+        if(code=="13"){
+            search("Baidu");
+        }
+    })
+</script>
