--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -123,9 +123,9 @@ layout: default
                         <form>
                             <input placeholder="">
                             <!--不同的搜索引擎按钮-->
-                            <button class="btn btn-warning s-btn submit">GG</button>
-                            <button class="btn btn-success s-btn submit">Bing</button>
-                            <button class="btn btn-danger s-btn submit">Baidu</button>
+                            <button class="btn btn-xs btn-warning s-btn submit">GG</button>
+                            <button class="btn btn-xs btn-success s-btn submit">Bing</button>
+                            <button class="btn btn-xs btn-danger s-btn submit">Baidu</button>
                         </form>
                     </div>
                 </section>
