增加访问计数 leancloud

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -132,6 +132,15 @@ layout: default
                 </div>
             </div>
         {% endif %}
+<!-- 显示访问次数 -->
+        {% if site.leancloud.enable %}
+        <div>
+          <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
+            Visited:
+            <a href="#"><span class="leancloud-visitors-count"></span>次</a>
+          </span>
+        </div>
+        {% endif %}
 
     <!-- Sidebar Container -->
             <div class="
