增加自定义计数

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -135,9 +135,9 @@ layout: default
 <!-- 显示访问次数 -->
         {% if site.leancloud.enable %}
         <div>
-          <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
+          <span id="{{ page.url }}" class="visitors" data-flag-title="{{ page.title }}">
             Visited:
-            <a href="#"><span class="leancloud-visitors-count"></span>次</a>
+            <a href="#"><span class="visitors-count"></span>次</a>
           </span>
         </div>
         {% endif %}
