--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -270,14 +270,34 @@
 <!-- 页面访问计数 -->
 {% if site.leancloud.enable %}
   <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-  <script src="https://cdn1.lncld.net/static/js/av-core-mini-0.6.1.js"></script>
-  <script>AV.initialize("{{site.leancloud.app_id}}", "{{site.leancloud.app_key}}");</script>
   <script>
+      $(document).ready(
+          function() {
+            fetchCount();
+            // addCount();
+          }
+      )
+
+      function fetchCount() {
+      let $visitors = $(".visitors");
+      let url = $visitors.attr('id').trim();
+      let title = $visitors.attr('data-flag-title').trim();
+      $.ajax({
+          url:"/Visit/visit?" + "postId=" + url + "&title=" + title,
+          type: 'GET',
+          success: display,
+          });
+      }
+      function display(data) {
+          console.log(data);
+      }
+  </script>
+  <!-- <script>
     //新增访问次数
     function addCount(Counter) {
       // 页面（博客文章）中的信息：leancloud_visitors
       // id为page.url， data-flag-title为page.title
-      var $visitors = $(".leancloud_visitors");
+      var $visitors = $(".visitors");
       var url = $visitors.attr('id').trim();
       var title = $visitors.attr('data-flag-title').trim();
       var query = new AV.Query(Counter);
@@ -452,7 +472,7 @@
         // showHitCount(Counter);
       }
     });
-  </script>
+  </script> -->
 {% endif %}
 
 
