--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -268,7 +268,7 @@
 </script>
 {% endif %}
 <!-- 页面访问计数 -->
-{% if site.leancloud.enable %}
+{% if site.visitor.enable %}
   <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
   <script>
       $(document).ready(
