--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,7 +133,7 @@ layout: default
             </div>
         {% endif %}
 <!-- 显示访问次数 -->
-        {% if site.leancloud.enable %}
+        {% if site.visitor.enable %}
         <div>
           <span id="{{ page.url }}" class="visitors" data-flag-title="{{ page.title }}">
             Visited:
