--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -283,7 +283,7 @@
       let url = $visitors.attr('id').trim();
       let title = $visitors.attr('data-flag-title').trim();
       $.ajax({
-          url:"http://visit.mrwang.pw/Visit/visit",
+          url:"https://visit.mrwang.pw/Visit/visit",
           type: 'GET',
           success: display,
           data: {
