--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -293,6 +293,7 @@
           });
       }
       function display(data) {
+          console.log(data)
           $(".visitors-count").val(data);
       }
   </script>
