--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,7 +137,7 @@ layout: default
         <div>
           <span id="{{ page.url }}" class="visitors" data-flag-title="{{ page.title }}">
             Visited:
-            <a href="#"><span class="visitors-count"></span>次</a>
+            <a href="#"><span class="visitors-count">{{ page.count }}</span>次</a>
           </span>
         </div>
         {% endif %}
