--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,8 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    <!-- Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} -->
+                    Copyright &copy; {{ site.title }} 2019
                     <br>
                     Theme on <a href="{{ site.github_repo }}">GitHub</a> |
                     <iframe
