关闭访问统计

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,14 +133,14 @@ layout: default
             </div>
         {% endif %}
 <!-- 显示访问次数 -->
-        {% if site.visitor.enable %}
-        <div>
-          <span id="{{ page.url }}" class="visitors" data-flag-title="{{ page.title }}">
-            Visited:
-            <a href="#"><span class="visitors-count">{{ page.count }}</span>次</a>
-          </span>
-        </div>
-        {% endif %}
+<!--        {% if site.visitor.enable %}-->
+<!--        <div>-->
+<!--          <span id="{{ page.url }}" class="visitors" data-flag-title="{{ page.title }}">-->
+<!--            Visited:-->
+<!--            <a href="#"><span class="visitors-count">{{ page.count }}</span>次</a>-->
+<!--          </span>-->
+<!--        </div>-->
+<!--        {% endif %}-->
 
     <!-- Sidebar Container -->
             <div class="
